maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: Unit does not take parameters
def aMurD():Boolean = {var b =false;droite()();b = estFaceMur();gauche();return b}
                                            ^